rewrote agents